@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: xine.h.in,v 1.140 2005/04/21 21:50:42 dsalt Exp $
+ * $Id: xine.h.in,v 1.141 2005/05/29 12:29:42 hadess Exp $
  *
  * public xine-lib (libxine) interface and documentation
  *
@@ -1751,6 +1751,7 @@ typedef struct {
 #define XINE_MSG_SECURITY		10 /* (security message) */
 #define XINE_MSG_AUDIO_OUT_UNAVAILABLE	11 /* none               */
 #define XINE_MSG_PERMISSION_ERROR       12 /* (file name or mrl) */
+#define XINE_MSG_FILE_EMPTY             13 /* file is empty      */
 
 /* opaque xine_event_queue_t */
 typedef struct xine_event_queue_s xine_event_queue_t;
