@@ -27,6 +27,8 @@ xine-lib (1.0.2)
   * Fix LE_64/BE_64 macros on non-x86 plataforms. may fixes issues with some
     demuxers like avi, asf and ogg.
   * sputext improvements/workarounds
+  * add a new error message when a file we tried to play is an empty
+  (zero-sized) file
 
 xine-lib (1.0.1)
   * Big XvMC quality / correctness / cpu-usage fix. [bug #1114517] 
